--- a/src/app/Pages/department/department.component.css
+++ b/src/app/Pages/department/department.component.css
@@ -54,4 +54,20 @@ padding: 5px;
 width:40%;
 margin-left: 30px
 }
+.img{
+  width: 25px;
+  height: 10%;
+}
+.img:hover{
+    background-color: chartreuse;
+    color: white;
+}
+.imgcancel{
+  width: 25px;
+  height: 10%;
+}
+.imgcancel:hover{
+  background-color: red;
+  color: white;
+}
 
